@@ -4457,7 +4457,7 @@ build
 </li></ul>
 
 <p>
-  And if <code>CONFIG_MEMCPY_VIK</code>, the following tuning options are available:
+  And if <code>CONFIG_MEMCPY_VIK</code> is selected, the following tuning options are available:
 </p>
 <ul><li>
     <code>CONFIG_MEMCPY_PRE_INC_PTRS</code>:
@@ -4471,7 +4471,7 @@ build
 </li>
 <li>
     <code>CONFIG_MEMCPY_64BIT</code>:
-    Compiles memcpy for 64 bit architectures
+    Compiles <code>memcpy()</code> for 64 bit architectures
 </li></ul>
 
 <p><li>
@@ -4481,6 +4481,14 @@ build
   <code>CONFIG_MEMSET_OPTSPEED</code>:
   Select this option to use a version of <code>memset()</code> optimized for speed.
   Default: <code>memset()</code> is optimized for size.
+</li></ul>
+
+<p>
+  And if <code>CONFIG_MEMSET_OPTSPEED</code> is selected, the following tuning option is available:
+</p>
+<ul><li>
+  <code>CONFIG_MEMSET_64BIT</code>:
+  Compiles <code>memset()</code> for 64 bit architectures
 </li></ul>
 
 <li>
